--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,10 @@
 /*Brad Burkett
 
-Week 8 - Final Project
+style page
 
-SWDV 640: USER INTERFACE DESIGN 05/03/2020
-
+SWDV 691: Capstone Project
 */
+
 @-ms-viewport {
     width: device-width;
   }
